added style tag to make the map render properly

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      .leaflet-container {
+        height: 500px;
+        width: 100%;
+        margin: 0 auto;
+        z-index: -11;
+      }
+    </style>
     <title>IP Address Tracker</title>
   </head>
 
