--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
         margin: 0 auto;
         z-index: -11;
       }
+
+      @media screen and (max-width: 830px) {
+        .leaflet-container {
+          height: 600px;
+        }
+      }
     </style>
     <title>IP Address Tracker</title>
   </head>
